Added about page and gallery page
Added a icon for the website

--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Gallery</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/lightbox.css">
-   
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/images/Icon.png">
 </head>
 <body>
-<div class="container">
-    <div class="gallery">
-        <a href="images/image1.JPG"data-lightbox="models" data-title="Caption1">
-            <img src="images/image1.JPG" alt="Image 1">
-        </a>
-        <a href="images/image2.JPG"data-lightbox="models" data-title="Caption2">
-            <img src="images/image2.JPG" alt="Image 2">
-        </a>
-        <a href="images/image3.JPG"data-lightbox="models" data-title="Caption3">
-            <img src="images/image3.JPG" alt="Image 3">
-        </a>
-        <a href="images/image4.JPG"data-lightbox="models" data-title="Caption4">
-            <img src="images/image4.JPG" alt="Image 4">
-        </a>
-    </div>
-</div>
-<script src="js/lightbox-plus-jquery.js"></script>
+
+<h1>Home</h1>
+
+<nav class="navbar">
+    <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+
+<section>
+    <h2>placeholder!</h2>
+    <p>placeholder</p>
+</section>
+
+
+<footer class="footer">
+    <p>&copy; 2025 Zachary | All rights reserved.</p>
+    <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
+</footer>
+
 </body>
 </html>
