--- a/about.html
+++ b/about.html
@@ -75,8 +75,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Zachary | All rights reserved.</p>
-        <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
+        <p>&copy; 2025 Zachary</p>
     </footer>
 </body>
 </html>
