--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Zachary, a passionate developer and game creator.">
     <link rel="stylesheet" href="css/about.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/images/Icon.png">
-    <title>About Zachary</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
+    <title>About</title>
 </head>
 <body>
     <header>
