--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/images/Icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
 
    
 </head>
