--- a/about.html
+++ b/about.html
@@ -73,9 +73,11 @@
             </ul>
         </section>
     </main>
-
+    
     <footer class="footer">
-        <p>&copy; 2025 Zachary</p>
+        <p>&copy; 2025 Zachary | All rights reserved.</p>
+        <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
     </footer>
+    
 </body>
 </html>
