--- a/gallery.html
+++ b/gallery.html
@@ -21,5 +21,10 @@
     </ul>
 </nav>
 
+<footer class="footer">
+    <p>&copy; 2025 Zachary | All rights reserved.</p>
+    <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
+</footer>
+
 </body>
 </html>
