--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="videos.html">Videos</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
 </nav>
