modified:   gallery.html 	renamed:    images/image2.jpg -> images/DJI_0598.JPG

--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,8 @@
         <a href="javascript:void(0);" onclick="openModal('images/image1.JPG', 'Beautiful Sunset')" data-caption="Beautiful Sunset">
             <img src="images/image1.JPG" alt="Image 1">
         </a>
-        <a href="javascript:void(0);" onclick="openModal('images/image2.JPG', 'Mountain View')" data-caption="Mountain View">
-            <img src="images/image2.JPG" alt="Image 2">
+        <a href="javascript:void(0);" onclick="openModal('images/DJI_0598', 'Road to Walnut Ridge, AR')" data-caption=" Road to Ridge, AR">
+            <img src="images/DJI_0598.JPG" alt="Image 2">
         </a>
         <a href="javascript:void(0);" onclick="openModal('images/image3.JPG', 'City Lights')" data-caption="City Lights">
             <img src="images/image3.JPG" alt="Image 3">
