--- a/about.html
+++ b/about.html
@@ -15,9 +15,13 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <ul>
+        <div class="hamburger" onclick="toggleMenu()">
+            &#9776; <!-- Hamburger icon -->
+        </div>
+        <ul class="navbar-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="videos.html">Videos</a></li>
             <li><a href="about.html" class="active">About</a></li>
         </ul>
     </nav>
@@ -47,9 +51,11 @@
                     <h3>Birthday</h3>
                     <p>November 28, 2005</p>
                 </div>
+                <!-- Roblox ID -->   
                 <div>
                     <h3>Roblox ID</h3>
                     <p>190772791</p>
+                    <a href="//www.roblox.com/users/190772791/profile" target="_blank">View Profile</a>
                 </div>
             </div>
         </section>
@@ -78,6 +84,8 @@
         <p>&copy; 2025 Zachary | All rights reserved.</p>
         <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
     </footer>
-    
+
+    <script src="js/about.js"></script>
+    <script src="js/script.js"></script> <!-- Add your JS script file -->
 </body>
 </html>
