--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <h1>Home</h1>
 
 <nav class="navbar">
-    <ul>
+    <div class="hamburger" onclick="toggleMenu()">
+        &#9776; <!-- Hamburger icon -->
+    </div>
+    <ul class="navbar-menu">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="videos.html">Videos</a></li>
@@ -30,6 +33,8 @@
     <p>&copy; 2025 Zachary | All rights reserved.</p>
     <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
 </footer>
+
+<script src="js/script.js"></script> <!-- Add your JS script file -->
 
 </body>
 </html>
