--- a/videos.html
+++ b/videos.html
@@ -12,7 +12,10 @@
 <h1>Videos</h1>
 
 <nav class="navbar">
-    <ul>
+    <div class="hamburger" onclick="toggleMenu()">
+        &#9776; <!-- Hamburger icon -->
+    </div>
+    <ul class="navbar-menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="videos.html" class="active">Videos</a></li>
@@ -24,7 +27,7 @@
 <div class="video-gallery">
     <h2>Videos</h2>
     <div class="video-panel">
-        <a href="javascript:void(0);" onclick="openModal('images/Videos/sunset.mp4', 'Sunset Video')" data-caption="Sunset Video">
+        <a\ href="javascript:void(0);" onclick="openModal('images/Videos/sunset.mp4', 'Sunset Video')" data-caption="Sunset Video">
             <video src="images/Videos/sunset.mp4" alt="Sunset"></video>
         </a>
         <!-- Add more videos here -->
@@ -45,5 +48,6 @@
 </footer>
 
 <script src="js/lightbox.js"></script>
+<script src="js/script.js"></script> <!-- Add your JS script file -->
 </body>
 </html>
