--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="videos.html">Videos</a></li>
             <li><a href="about.html" class="active">About</a></li>
         </ul>
     </nav>
