--- a/gallery.html
+++ b/gallery.html
@@ -25,14 +25,14 @@
         <a href="javascript:void(0);" onclick="openModal('images/image1.JPG', 'Beautiful Sunset')" data-caption="Beautiful Sunset">
             <img src="images/image1.JPG" alt="Image 1">
         </a>
-        <a href="javascript:void(0);" onclick="openModal('images/DJI_0598', 'Road to Walnut Ridge, AR')" data-caption=" Road to Ridge, AR">
-            <img src="images/DJI_0598.JPG" alt="Image 2">
+        <a href="javascript:void(0);" onclick="openModal('images/image2.JPG', 'Sunset')" data-caption="Sunset">
+            <img src="images/DJI_0598.JPG" alt="Sunset">
         </a>
-        <a href="javascript:void(0);" onclick="openModal('images/image3.JPG', 'City Lights')" data-caption="City Lights">
-            <img src="images/image3.JPG" alt="Image 3">
+        <a href="javascript:void(0);" onclick="openModal('images/image3.JPG', 'Hydrangeas')" data-caption="Hydrangeas">
+            <img src="images/image3.JPG" alt="Hydrangeas">
         </a>
-        <a href="javascript:void(0);" onclick="openModal('images/image4.JPG', 'Forest Path')" data-caption="Forest Path">
-            <img src="images/image4.JPG" alt="Image 4">
+        <a href="javascript:void(0);" onclick="openModal('images/image4.JPG', 'Road to Walnut Ridge, AR')" data-caption="Road to Ridge, AR">
+            <img src="images/image4.JPG" alt="Road to Ridge, AR">
         </a>
     </div>
 </div>
