modified:   gallery.html 	modified:   index.html

--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
             <img src="images/image1.JPG" alt="Image 1">
         </a>
         <a href="javascript:void(0);" onclick="openModal('images/image2.JPG', 'Sunset')" data-caption="Sunset">
-            <img src="images/DJI_0598.JPG" alt="Sunset">
+            <img src="images/image2.JPG" alt="Sunset">
         </a>
         <a href="javascript:void(0);" onclick="openModal('images/image3.JPG', 'Hydrangeas')" data-caption="Hydrangeas">
             <img src="images/image3.JPG" alt="Hydrangeas">
