--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="/" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
 </nav>
+
 
 <section>
     <h2>placeholder!</h2>
