--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 <nav class="navbar">
     <ul>
         <li><a href="/zzr/" class="active">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/zzr/gallery.html">Gallery</a></li>
+        <li><a href="/zzr/videos.html">Videos</a></li>
+        <li><a href="/zzr/about.html">About</a></li>
     </ul>
 </nav>
+
 
 <section>
     <h2>Placeholder!</h2>
