--- a/videos.html
+++ b/videos.html
@@ -13,12 +13,13 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="videos.html" class="active">Videos</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/zzr/index.html" class="active">Home</a></li>
+        <li><a href="/zzr/">Gallery</a></li>
+        <li><a href="/zzr/videos.html">Videos</a></li>
+        <li><a href="/zzr/about.html">About</a></li>
     </ul>
 </nav>
+
 
 <!-- Video Gallery Section -->
 <div class="video-gallery">
