modified:   videos.html

--- a/videos.html
+++ b/videos.html
@@ -13,13 +13,13 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="/zzr/index.html" class="active">Home</a></li>
-        <li><a href="/zzr/">Gallery</a></li>
-        <li><a href="/zzr/videos.html">Videos</a></li>
-        <li><a href="/zzr/about.html">About</a></li>
+        <a href="/zzr/">Home</a>
+        <a href="/zzr/gallery.html">Gallery</a>
+        <a href="/zzr/videos.html">Videos</a>
+        <a href="/zzr/about.html">About</a>
+        
     </ul>
 </nav>
-
 
 <!-- Video Gallery Section -->
 <div class="video-gallery">
