modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="/zzr/" class="active">Home</a></li>
-        <li><a href="/zzr/gallery.html">Gallery</a></li>
-        <li><a href="/zzr/videos.html">Videos</a></li>
-        <li><a href="/zzr/about.html">About</a></li>
+        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/videos">Videos</a></li>
+        <li><a href="/about">About</a></li>
     </ul>
 </nav>
-
 
 <section>
     <h2>Placeholder!</h2>
