modified:   about.html 	modified:   gallery.html 	modified:   videos.html

--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
+    <base href="https://twrilz.github.io/zzr/">
 </head>
 <body>
 
@@ -13,10 +14,10 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html" class="active">Gallery</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/" class="home">Home</a></li>
+        <li><a href="/gallery" class="active">Gallery</a></li>
+        <li><a href="/videos">Videos</a></li>
+        <li><a href="/about">About</a></li>
     </ul>
 </nav>
 
