--- a/videos.html
+++ b/videos.html
@@ -6,6 +6,7 @@
     <title>Videos</title>
     <link rel="stylesheet" href="css/videos.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
+    <base href="https://twrilz.github.io/zzr/">
 </head>
 <body>
 
@@ -13,11 +14,10 @@
 
 <nav class="navbar">
     <ul>
-        <a href="/zzr/">Home</a>
-        <a href="/zzr/gallery.html">Gallery</a>
-        <a href="/zzr/videos.html">Videos</a>
-        <a href="/zzr/about.html">About</a>
-        
+        <li><a href="/" class="home">Home</a></li>
+        <li><a href="/gallery" class="gallery">Gallery</a></li>
+        <li><a href="/videos" class="active">Videos</a></li>
+        <li><a href="/about" class="about">About</a></li>
     </ul>
 </nav>
 
@@ -33,7 +33,6 @@
 </div>
 
 <!-- Modal -->
-
 <div id="lightbox-modal" class="modal">
     <div id="modal-caption" class="modal-caption"></div> <!-- Caption goes here -->
     <img id="modal-image" class="modal-content" alt="Modal Image">
