--- a/videos.html
+++ b/videos.html
@@ -14,8 +14,8 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="/" class="home">Home</a></li>
-        <li><a href="/gallery/gallery.html" class="gallery">Gallery</a></li>
+        <li><a href="/index.html" class="home">Home</a></li>
+        <li><a href="/" class="gallery">Gallery</a></li>
         <li><a href="/videos" class="active">Videos</a></li>
         <li><a href="/about" class="about">About</a></li>
     </ul>
