modified:   about.html 	renamed:    gallery/gallery.html -> gallery.html 	modified:   index.html 	modified:   videos.html
trying to fix the issue

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
     <title>About</title>
-    <base href="https://twrilz.github.io/zzr/">
 </head>
 <body>
     <header>
@@ -17,10 +16,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul>
-            <li><a href="/" class="home">Home</a></li>
-            <li><a href="/gallery" class="gallery">Gallery</a></li>
-            <li><a href="/videos" class="videos">Videos</a></li>
-            <li><a href="/about" class="active">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="videos.html">Videos</a></li>
+            <li><a href="about.html" class="active">About</a></li>
         </ul>
     </nav>
 
