--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
-    <base href="https://twrilz.github.io/zzr/">
 </head>
 <body>
 
@@ -14,17 +13,19 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="/" class="active">Home</a></li>
-        <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/videos">Videos</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="videos.html">Videos</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 </nav>
 
+
 <section>
-    <h2>Placeholder!</h2>
-    <p>Placeholder</p>
+    <h2>placeholder!</h2>
+    <p>placeholder</p>
 </section>
+
 
 <footer class="footer">
     <p>&copy; 2025 Zachary | All rights reserved.</p>
