modified:   index.html
updated place holders

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </ul>
 </nav>
 
-
 <section>
-    <h2>placeholder!</h2>
-    <p>placeholder</p>
+    <h2>Welcome to My Website!</h2>
+    <p>This is a brief introduction to my personal website. Here, you can find my latest projects, gallery, and videos. Feel free to explore!</p>
 </section>
+
 
 
 <footer class="footer">
