modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="https://twrilz.github.io/" class="active">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="about.html">About</a></li>
