--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="videos.html">Videos</a></li>
-            <li><a href="about.html" class="active">About</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+            <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/about.html" class="active">About</a></li>
         </ul>
     </nav>
 
