modified:   about.html 	modified:   gallery.html 	modified:   index.html 	modified:   videos.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <nav class="navbar">
     <ul>
         <li><a href="zzr/index.html" class="active">Home</a></li>
-        <li><a href="/gallery.html">Gallery</a></li>
-        <li><a href="/videos.html">Videos</a></li>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="zzr/gallery.html">Gallery</a></li>
+        <li><a href="zzr/videos.html">Videos</a></li>
+        <li><a href="zzr/about.html">About</a></li>
     </ul>
 </nav>
 
