modified:   about.html 	modified:   gallery.html 	modified:   index.html 	modified:   videos.html
removed: zzr/

--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul>
-            <li><a href="zzr/index.html">Home</a></li>
-            <li><a href="zzr/gallery.html">Gallery</a></li>
-            <li><a href="zzr/videos.html">Videos</a></li>
-            <li><a href="zzr/about.html" class="active">About</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+            <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/about.html" class="active">About</a></li>
         </ul>
     </nav>
 
