--- a/gallery.html
+++ b/gallery.html
@@ -13,10 +13,10 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="zzr/index.html">Home</a></li>
-        <li><a href="zzr/gallery.html" class="active">Gallery</a></li>
-        <li><a href="zzr/videos.html">Videos</a></li>
-        <li><a href="zzr/about.html">About</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/gallery.html" class="active">Gallery</a></li>
+        <li><a href="/videos.html">Videos</a></li>
+        <li><a href="/about.html">About</a></li>
     </ul>
 </nav>
 
