--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="/index.html" class="active">Home</a></li>
-        <li><a href="/gallery.html">Gallery</a></li>
-        <li><a href="/videos.html">Videos</a></li>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="main/zzr/index.html" class="active">Home</a></li>
+        <li><a href="main/zzr/gallery.html">Gallery</a></li>
+        <li><a href="main/zzr/videos.html">Videos</a></li>
+        <li><a href="main/zzr/about.html">About</a></li>
     </ul>
 </nav>
 
