--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul>
-            <li><a href="main/zzr/index.html">Home</a></li>
-            <li><a href="main/zzr/gallery.html">Gallery</a></li>
-            <li><a href="main/zzr/videos.html">Videos</a></li>
-            <li><a href="main/zzr/about.html" class="active">About</a></li>
+            <li><a href="https://twrilz.github.io/zzr/index.html">Home</a></li>
+            <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
+            <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
+            <li><a href="https://twrilz.github.io//zzr/about.html" class="active">About</a></li>
         </ul>
     </nav>
 
