added the contact to the about page added the contact to the gallery page added the contact to the videos page ```

--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,7 @@
         <li><a href="https://twrilz.github.io/zzr/gallery.html" class="active">Gallery</a></li>
         <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
         <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
+        <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
     </ul>
 </nav>
 
