--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
             <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
             <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
             <li><a href="https://twrilz.github.io//zzr/about.html" class="active">About</a></li>
+            <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
         </ul>
     </nav>
 
