--- a/videos.html
+++ b/videos.html
@@ -17,6 +17,7 @@
         <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
         <li><a href="https://twrilz.github.io/zzr/videos.html" class="active">Videos</a></li>
         <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
+        <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
     </ul>
 </nav>
 
