--- a/index.html
+++ b/index.html
@@ -46,15 +46,20 @@
   <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
 </footer>
 
-<!-- Three.js Module Scripts -->
+<!-- Three.js ES Module Scripts -->
 <script type="module">
   import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js';
   import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
   import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/controls/OrbitControls.js';
 
-  // Scene setup
+  // Scene
   const scene = new THREE.Scene();
+
+  // Camera
   const camera = new THREE.PerspectiveCamera(75, window.innerWidth / 500, 0.1, 1000);
+  camera.position.z = 5;
+
+  // Renderer
   const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
   renderer.setSize(window.innerWidth, 500);
   document.getElementById('modelViewer').appendChild(renderer.domElement);
@@ -72,27 +77,25 @@
   // Load 3D model
   const loader = new GLTFLoader();
   loader.load('models/shvan_92.glb', function(gltf) {
-      scene.add(gltf.scene);
-      gltf.scene.position.set(0, 0, 0);
+    scene.add(gltf.scene);
+    gltf.scene.position.set(0, 0, 0);
   }, undefined, function(error) {
-      console.error('Error loading model:', error);
+    console.error('Error loading model:', error);
   });
-
-  camera.position.z = 5;
 
   // Animation loop
   function animate() {
-      requestAnimationFrame(animate);
-      controls.update();
-      renderer.render(scene, camera);
+    requestAnimationFrame(animate);
+    controls.update();
+    renderer.render(scene, camera);
   }
   animate();
 
   // Handle window resize
   window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / 500;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, 500);
+    camera.aspect = window.innerWidth / 500;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, 500);
   });
 </script>
 
