--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
         <li><a href="https://twrilz.github.io/zzr/index.html">Home</a></li>
         <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
         <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
+        <li><a href="https://twrilz.github.io//zzr/3dviewer.html">Models</a></li>
         <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
         <li><a href="https://twrilz.github.io/zzr/contact.html" class="active">Contact</a></li>
     </ul>
