--- a/3dviewer.html
+++ b/3dviewer.html
@@ -38,15 +38,17 @@
 </head>
 <body>
 
+
 <nav class="navbar">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="videos.html">Videos</a></li>
-    <li><a href="3dviewer.html" class="active">Models</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
+    <ul>
+        <li><a href="https://twrilz.github.io/zzr/index.html" >Home</a></li>
+        <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
+        <li><a href="https://twrilz.github.io//zzr/videos.html">Videos</a></li>
+        <li><a href="https://twrilz.github.io//zzr/3dviewer.html"class="active">Models</a></li>
+        <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
+        <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
+        
+    </ul>
 </nav>
 
 <!-- 3D Viewer -->
