--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <ul>
         <li><a href="https://twrilz.github.io/zzr/index.html" class="active">Home</a></li>
         <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
-        <li><a href="https://twrilz.github.io//zzr/videos.html">Videos</a></li>
-        <li><a href="https://twrilz.github.io//zzr/3dviewer.html">Models</a></li>
+        <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
+        <li><a href="https://twrilz.github.io/zzr/3dviewer.html">Models</a></li>
         <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
         <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
         
