--- a/about.html
+++ b/about.html
@@ -51,9 +51,8 @@
                     <p>November 28, 2005</p>
                 </div>
                 <div>
-                    <h3>Roblox ID</h3>
-                    <p>190772791</p>
-                </div>
+                    <h3>Age</h3>
+                    <p>19</p>
             </div>
         </section>
 
