--- a/3dviewer.html
+++ b/3dviewer.html
@@ -43,8 +43,8 @@
     <ul>
         <li><a href="https://twrilz.github.io/zzr/index.html" >Home</a></li>
         <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
-        <li><a href="https://twrilz.github.io//zzr/videos.html">Videos</a></li>
-        <li><a href="https://twrilz.github.io//zzr/3dviewer.html"class="active">Models</a></li>
+        <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
+        <li><a href="https://twrilz.github.io/zzr/3dviewer.html"class="active">Models</a></li>
         <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
         <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
         
