--- a/3dviewer.html
+++ b/3dviewer.html
@@ -34,22 +34,15 @@
       margin: 0 15px;
       font-weight: bold;
     }
+    nav.navbar ul li a.active {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
-
-<nav class="navbar">
-    <ul>
-        <li><a href="https://twrilz.github.io/zzr/index.html" >Home</a></li>
-        <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
-        <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
-        <li><a href="https://twrilz.github.io/zzr/3dviewer.html"class="active">Models</a></li>
-        <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
-        <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
-        
-    </ul>
-</nav>
+<!-- Navbar container -->
+<nav id="navbar" class="navbar"></nav>
 
 <!-- 3D Viewer -->
 <div id="modelViewer"></div>
@@ -59,23 +52,39 @@
   import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
   import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/controls/OrbitControls.js';
 
+  // Load shared navbar
+  fetch('navbar.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('navbar').innerHTML = data;
+
+      // Highlight the current page
+      const links = document.querySelectorAll('#navbar a');
+      links.forEach(link => {
+        if(link.href === window.location.href) {
+          link.classList.add('active');
+        }
+      });
+    })
+    .catch(err => console.error('Error loading navbar:', err));
+
+  // Three.js setup
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.z = 5;
+
   const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.getElementById('modelViewer').appendChild(renderer.domElement);
 
-  // Light
   const light = new THREE.DirectionalLight(0xffffff, 1);
   light.position.set(5, 10, 7.5);
   scene.add(light);
 
-  // Controls
   const controls = new OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
   controls.dampingFactor = 0.05;
 
-  // Load 3D model
   const loader = new GLTFLoader();
   loader.load('models/shvan_92.glb', function(gltf) {
     scene.add(gltf.scene);
@@ -84,9 +93,6 @@
     console.error('Error loading model:', error);
   });
 
-  camera.position.z = 5;
-
-  // Animate
   function animate() {
     requestAnimationFrame(animate);
     controls.update();
@@ -94,7 +100,6 @@
   }
   animate();
 
-  // Handle resize
   window.addEventListener('resize', () => {
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
