--- a/3dviewer.html
+++ b/3dviewer.html
@@ -6,43 +6,19 @@
   <title>3D Model Viewer</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
-  <style>
-    body { margin: 0; font-family: sans-serif; }
-    #modelViewer {
-      width: 100vw;
-      height: 100vh;
-      display: block;
-    }
-    nav.navbar {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: 10;
-      background: rgba(0,0,0,0.5);
-      padding: 10px 0;
-    }
-    nav.navbar ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-    nav.navbar ul li a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-    nav.navbar ul li a.active {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
 
-<!-- Navbar container -->
-<nav id="navbar" class="navbar"></nav>
+<nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="videos.html">Videos</a></li>
+    <li><a href="3dviewer.html" class="active">Models</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
 <!-- 3D Viewer -->
 <div id="modelViewer"></div>
@@ -52,47 +28,57 @@
   import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
   import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/controls/OrbitControls.js';
 
-  // Load shared navbar
-  fetch('navbar.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('navbar').innerHTML = data;
-
-      // Highlight the current page
-      const links = document.querySelectorAll('#navbar a');
-      links.forEach(link => {
-        if(link.href === window.location.href) {
-          link.classList.add('active');
-        }
-      });
-    })
-    .catch(err => console.error('Error loading navbar:', err));
-
-  // Three.js setup
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-  camera.position.z = 5;
-
-  const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+  const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: false });
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.getElementById('modelViewer').appendChild(renderer.domElement);
 
-  const light = new THREE.DirectionalLight(0xffffff, 1);
-  light.position.set(5, 10, 7.5);
-  scene.add(light);
+  // Lights
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+  directionalLight.position.set(5, 10, 7.5);
+  scene.add(directionalLight);
 
+  const ambientLight = new THREE.AmbientLight(0xffffff, 0.4); // Soft fill light
+  scene.add(ambientLight);
+
+  // Controls
   const controls = new OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
   controls.dampingFactor = 0.05;
 
+  // Instantiate the GLTFLoader
   const loader = new GLTFLoader();
+
   loader.load('models/shvan_92.glb', function(gltf) {
-    scene.add(gltf.scene);
-    gltf.scene.position.set(0, 0, 0);
+    // Center and scale the model
+    const model = gltf.scene;
+    // Compute bounding box
+    const box = new THREE.Box3().setFromObject(model);
+    const size = new THREE.Vector3();
+    box.getSize(size);
+    const maxDim = Math.max(size.x, size.y, size.z);
+    const scale = 2 / maxDim; // Scale model to fit in a 2x2x2 box
+    model.scale.setScalar(scale);
+
+    // Center the model
+    box.setFromObject(model);
+    const center = new THREE.Vector3();
+    box.getCenter(center);
+    model.position.sub(center); // Move model to origin
+
+    scene.add(model);
   }, undefined, function(error) {
     console.error('Error loading model:', error);
   });
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+  });
 
+  // Animate
   function animate() {
     requestAnimationFrame(animate);
     controls.update();
@@ -100,6 +86,7 @@
   }
   animate();
 
+  // Handle resize
   window.addEventListener('resize', () => {
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
