--- a/3dviewer.html
+++ b/3dviewer.html
@@ -19,6 +19,14 @@
     .ui-overlay input[type=file] { display: none; }
     .drop-hint { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); color: #ddd; background: rgba(0,0,0,0.35); padding: 8px 12px; border-radius: 6px; pointer-events: none; z-index: 5; }
   </style>
+  <!-- Import map to resolve bare 'three' specifier used internally by jsm example modules -->
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js"
+    }
+  }
+  </script>
 </head>
 <body>
 
