--- a/3dviewer.html
+++ b/3dviewer.html
@@ -50,7 +50,7 @@
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 <script src="Twrilz/zzr/js/OrbitControls.js"></script> <!-- non-module example -->
 <script type="module">
-  import { GLTFLoader } from './js/three/examples/jsm/loaders/GLTFLoader.js';
+  import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
 
   // Renderer, scene, camera
   const container = document.getElementById('modelViewer');
