--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
             <li><a href="https://twrilz.github.io/zzr/index.html">Home</a></li>
             <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
             <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
-            <li><a href="https://twrilz.github.io/zzr/3dviewer.html">Models</a></li>
             <li><a href="https://twrilz.github.io/zzr/about.html" class="active">About</a></li>
             <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
         </ul>
@@ -77,9 +76,9 @@
     </main>
     
     <footer class="footer">
-        <p>&copy; 2025 Zachary | All rights reserved.</p>
+        <p>&copy; <span class="current-year"></span> Zachary | All rights reserved.</p>
         <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
     </footer>
-    
+    <script src="js/year.js"></script>
 </body>
 </html>
