--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,6 @@
         <li><a href="https://twrilz.github.io/zzr/index.html">Home</a></li>
         <li><a href="https://twrilz.github.io/zzr/gallery.html" class="active">Gallery</a></li>
         <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
-        <li><a href="https://twrilz.github.io/zzr/3dviewer.html">Models</a></li>
         <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
         <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
     </ul>
@@ -52,6 +51,11 @@
     <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
 </footer>
 
+    <p>&copy; <span class="current-year"></span> Zachary | All rights reserved.</p>
+    <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
+</footer>
+
+<script src="js/year.js"></script>
 <script src="js/lightbox.js"></script>
 </body>
 </html>
