--- a/about.html
+++ b/about.html
@@ -26,9 +26,7 @@
         <section>
             <h2>Biography</h2>
             <p class="bio">
-                Zachary is a passionate developer with a strong interest in game creation and coding. 
-                He is focused on making innovative and fun experiences. At 19 years old, he has worked on various projects 
-                and continues to develop creative gaming experiences.
+                Hi, I'm Zachary, and welcome to my personal website.
             </p>
         </section>
 
@@ -45,11 +43,12 @@
                 </div>
                 <div>
                     <h3>Birthday</h3>
-                    <p>November 28, 2005</p>
+                    <p id="birthday" data-birthday="2005-11-28">November 28, 2005</p>
                 </div>
                 <div>
                     <h3>Age</h3>
-                    <p>20</p>
+                    <p id="age">loading...</p>
+                </div>
             </div>
         </section>
 
