Update project files

--- a/index.html
+++ b/index.html
@@ -8,29 +8,38 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
 </head>
 <body>
-<nav class="navbar">
-    <ul>
-        <li><a href="https://twrilz.github.io/zzr/index.html" class="active">Home</a></li>
-        <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
-        <li><a href="https://twrilz.github.io/zzr/videos.html">Videos</a></li>
-        <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
-        <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
-        
-    </ul>
-</nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="videos.html">Videos</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<section>
-    <h2>Welcome to My Website!</h2>
-    <p>This is a brief introduction to my personal website. Here, you can find my latest projects, gallery, and videos. Feel free to explore!</p>
-</section>
+    <header>
+        <h1>Zachary's Website</h1>
+    </header>
 
+    <main>
+        <section>
+            <h2>Welcome</h2>
+            <p>This is a brief introduction to my personal website. Explore my projects, gallery, and videos below.</p>
+        </section>
 
+        <section>
+            <h2>Latest</h2>
+            <p>Check out the <a href="gallery.html">Gallery</a> and <a href="videos.html">Videos</a> for recent uploads.</p>
+        </section>
+    </main>
 
-<footer class="footer">
-    <p>&copy; <span class="current-year"></span> Zachary | All rights reserved.</p>
-    <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
-</footer>
-<script src="js/year.js"></script>
+    <footer class="footer">
+        <p>&copy; <span class="current-year"></span> Zachary | All rights reserved.</p>
+        <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
+    </footer>
+    <script src="js/year.js"></script>
 
 </body>
 </html>
