--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videos</title>
-    <link rel="stylesheet" href="css/videos.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
 </head>
 <body>
