Improve Latest section: add two-card layout and styles

--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
             <p>This is a brief introduction to my personal website. Explore my projects, gallery, and videos below.</p>
         </section>
 
-        <section>
+        <section class="latest">
             <h2>Latest</h2>
-            <p>Check out the <a href="gallery.html">Gallery</a> and <a href="videos.html">Videos</a> for recent uploads.</p>
+            <div class="latest-grid">
+                <article class="card">
+                    <h3>Gallery — New Photos</h3>
+                    <p>Fresh images from recent shoots and projects. Browse highlights and full albums in the gallery.</p>
+                    <a class="btn" href="gallery.html">View Gallery</a>
+                </article>
+                <article class="card">
+                    <h3>Videos — Recent Uploads</h3>
+                    <p>New videos and clips uploaded recently — watch the latest highlights and walkthroughs.</p>
+                    <a class="btn" href="videos.html">Watch Videos</a>
+                </article>
+            </div>
         </section>
     </main>
 
